test/programs/invalid_programs/syntax/non_type_for_cast_impl.jm
#!TypeError

T = 3

class Foo
  def self as T
    return 2
  end
end
